feat: настройка линтера, форматирование, запрос меню с сервера del-1

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@
 }
 
 body {
-        height: 100vh;
         font-family: "Open Sans", sans-serif;
+        background-color: antiquewhite;
 }
 
 * {
