--- a/src/pages/Menu/styles.module.css
+++ b/src/pages/Menu/styles.module.css
@@ -3,3 +3,11 @@
         flex-direction: row;
         justify-content: space-between;
 }
+
+.products {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 40px;
+        margin-top: 30px;
+}
