--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -24,11 +24,13 @@
 }
 
 .big {
+        width: 248px;
         padding: 20px 60px;
         height: 60px;
         text-transform: uppercase;
         font-size: 15px;
         font-weight: 600;
+        box-shadow: 0px 10px 40px 0px rgba(122, 129, 190, 0.16);
 }
 
 .exit {
