--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -25,7 +25,7 @@
 
 .big {
         width: 248px;
-        padding: 20px 60px;
+        padding: 20px auto;
         height: 60px;
         text-transform: uppercase;
         font-size: 15px;
