--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -12,8 +12,10 @@
 }
 
 .promo {
-        width: 517px;
+        width: 100%;
+        max-width: 517px;
         height: 60px;
+        border-radius: 100px;
 }
 
 .invalid {
