--- a/src/components/CartItem/styles.module.css
+++ b/src/components/CartItem/styles.module.css
@@ -17,6 +17,7 @@
         display: flex;
         justify-content: center;
         border-radius: 20px;
+        box-shadow: 0px 8px 25px 0px rgba(224, 219, 196, 0.9);
 }
 
 .product-image {
@@ -81,6 +82,7 @@
 .increment {
         color: white;
         background-color: rgba(254, 114, 76, 1);
+        box-shadow: 0px 7px 15px 0px rgba(254, 114, 76, 0.4);
 }
 
 .product-count {
