--- a/src/layout/Menu/styles.module.css
+++ b/src/layout/Menu/styles.module.css
@@ -1,22 +1,26 @@
 .layout {
-        height: 100vh;
+        height: 100%;
         margin: 0 auto;
-        width: 100%;
-        max-width: 1024px;
-        min-width: 768px;
+        width: 1024px;
         display: flex;
         flex-direction: row;
         background-color: var(--white-color);
 }
 
-.sidebar {
+.sidebar-wrapper {
         width: 250px;
-        height: 100%;
+        min-height: 100%;
         padding: 25px 0 40px 25px;
+        border-right: 1px solid var(--separator-color);
+}
+
+.sidebar {
+        position: relative;
+        width: 100%;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        border-right: 1px solid var(--separator-color);
 }
 
 .main {
@@ -26,7 +30,9 @@
 
 .sidebarTop {
 }
-.sidebarBottom {
+.sidebarButton {
+        position: absolute;
+        bottom: 60px;
 }
 .profile {
 }
